--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,10 @@ langchain-huggingface
 faiss-cpu
 chromadb
 langchain_chroma
+beautifulsoup4
+langchain_groq
+langchain_core
+fastapi
+uvicorn
+langserve
+sse_starlette
